# quick-bevy-compute-web-reproduction

./: Cargo.toml  README.md  index.html  tree.txt
.cargo/: config.toml
credits/: CREDITS.md
credits/licenses/: Bevy_MIT_License.md
run-wasm/: Cargo.toml
src/: main.rs  plugin_group.rs
